# task-queue

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tasks_table.py
backend/app/: celery_app.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: tasks.py  websocket.py
backend/app/tasks/: llm_task.py
backend/tests/: test_tasks.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: tasks.ts
frontend/src/components/: TaskCard.tsx  TaskForm.tsx  TaskList.tsx
frontend/src/hooks/: useTaskWebSocket.ts
frontend/src/types/: task.ts
